Bug 408778 - Notification shown after an extraction should have a button to open the destination folder
Summary: Notification shown after an extraction should have a button to open the desti...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-16 13:06 UTC by Patrick Silva
Modified: 2021-03-03 17:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (9.03 KB, image/jpeg)
2019-06-17 00:10 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-06-16 13:06:44 UTC
SUMMARY
with the new notifications system of plasma 5.16, the notification shown by Ark
after an extraction have no button to open the destination folder.

STEPS TO REPRODUCE
1. start plasma 5.16
2. extract a big compressed file with Ark
3. 

OBSERVED RESULT
when the extraction is completed, plasma shows a notification without a button
to open the destination folder.

EXPECTED RESULT
The notification should have a button to open the destination folder

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.60.0
Qt Version: 5.12.3
Comment 1 Nate Graham 2019-06-16 22:43:15 UTC
Can you attach a picture of the notification in question? Thanks!
Comment 2 Patrick Silva 2019-06-17 00:10:53 UTC
Created attachment 120928 [details]
screenshot
Comment 3 Nate Graham 2019-06-17 00:11:58 UTC
Thanks!
Comment 4 Kai Uwe Broulik 2019-06-17 07:26:36 UTC
Should probably set a destUrl property on the job or use setDescription to provide source and destination, then it will deduce that automatically.
Comment 5 Kai Uwe Broulik 2019-06-17 07:26:59 UTC
Also needs to setTotalAmount(foo, Bytes) for that to work
Comment 6 Dan Dascalescu 2021-02-25 09:14:01 UTC
Was just about to file the same wishlist.

This button obviously should only be displayed if the "Open destination folder after extraction" checkbox was unchecked before the extraction.
Comment 7 Bug Janitor Service 2021-02-25 11:56:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/29
Comment 8 Kai Uwe Broulik 2021-02-26 19:52:29 UTC
Git commit 52b625081217dfe89713a918d892de1b30a517af by Kai Uwe Broulik.
Committed on 26/02/2021 at 19:52.
Pushed by broulik into branch 'master'.

[Notifications] Offer "Open Containing Folder" whenever we have a destUrl

The restriction on having an amount of files to be processed was to avoid
showing whatever last file had been copied as destination.

However, we already only fall back to using the "destination" label contents
when there is a single file (cf. `NotificationManager::JobPrivate::destUrl()`),
making it safe to assume destUrl is always a predicatble/useful location.

M  +4    -5    applets/notifications/package/contents/ui/JobItem.qml

https://invent.kde.org/plasma/plasma-workspace/commit/52b625081217dfe89713a918d892de1b30a517af
Comment 9 Kai Uwe Broulik 2021-03-03 17:19:36 UTC
Git commit c254ee56be03f142bbe7f9c4f5e23d4a8d00f9b7 by Kai Uwe Broulik.
Committed on 03/03/2021 at 17:19.
Pushed by broulik into branch 'master'.

Add destUrl to jobs

Allows the job view server to know what is the actual destination
of a job and provide useful actions ("Open Containing Folder")
when the job is done.

M  +2    -0    app/batchextract.cpp
M  +2    -0    kerfuffle/jobs.cpp

https://invent.kde.org/utilities/ark/commit/c254ee56be03f142bbe7f9c4f5e23d4a8d00f9b7