Add destUrl to jobs

Allows the job view server to know what is the actual destination
of a job and provide useful actions ("Open Containing Folder")
when the job is done.

BUG: 408778